--- a/debian/control
+++ b/debian/control
@@ -1,25 +1,47 @@
 Source: memkind
 Section: utils
 Priority: optional
-Maintainer: Krzysztof Kulakowski <krzysztof.kulakowski@intel.com>
-Build-Depends: debhelper (>= 8.0.0)
-Standards-Version: 3.9.4
+Maintainer: Adam Borowski <kilobyte@angband.pl>
+Build-Depends: debhelper (>= 11~), libnuma-dev
+Standards-Version: 4.2.1
+Rules-Requires-Root: no
 Homepage: https://github.com/memkind/memkind
+Vcs-Git: https://github.com/kilobyte/memkind.git -b debian
+Vcs-Browser: https://github.com/kilobyte/memkind/tree/debian
 
-Package: memkind
+Package: libmemkind0
 Architecture: any
+Section: libs
 Depends: ${shlibs:Depends}, ${misc:Depends}
-Description:
- The memkind library is an user extensible heap manager built on top of
- jemalloc which enables control of memory characteristics and a
- partitioning of the heap between kinds of memory. The kinds of memory
- are defined by operating system memory policies that have been applied
- to virtual address ranges. Memory characteristics supported by
- memkind without user extension include control of NUMA and page size
- features. The jemalloc non-standard interface has been extended to
- enable specialized arenas to make requests for virtual memory from the
- operating system through the memkind partition interface. Through the
- other memkind interfaces the user can control and extend memory
- partition features and allocate memory while selecting enabled
- features. This software is being made available for early evaluation.
- Feedback on design or implementation is greatly appreciated.
+Description: user-extensible heap manager for heterogeneous memory platforms
+ The memkind library is a user extensible heap manager built on top of
+ jemalloc which enables control of memory characteristics and a partitioning
+ of the heap between kinds of memory.  While arbitrary user control is
+ possible, built-in characteristics include NUMA and page size.
+ .
+ This package contains the runtime library.
+
+Package: libmemkind-dev
+Architecture: any
+Section: libdevel
+Depends: ${shlibs:Depends}, ${misc:Depends}, libmemkind0 (= ${binary:Version})
+Description: user-extensible heap manager for heterogeneous memory platforms
+ The memkind library is a user extensible heap manager built on top of
+ jemalloc which enables control of memory characteristics and a partitioning
+ of the heap between kinds of memory.  While arbitrary user control is
+ possible, built-in characteristics include NUMA and page size.
+ .
+ This package contains the development files for libmemkind and related
+ libraries.
+
+Package: libmemkind-progs
+Architecture: any
+Section: admin
+Depends: ${shlibs:Depends}, ${misc:Depends}
+Description: user-extensible heap manager for heterogeneous memory platforms
+ The memkind library is a user extensible heap manager built on top of
+ jemalloc which enables control of memory characteristics and a partitioning
+ of the heap between kinds of memory.  While arbitrary user control is
+ possible, built-in characteristics include NUMA and page size.
+ .
+ This package contains support programs that use libmemkind0.
