--- a/debian/control
+++ b/debian/control
@@ -2,7 +2,7 @@ Source: memkind
 Section: utils
 Priority: optional
 Maintainer: Adam Borowski <kilobyte@angband.pl>
-Build-Depends: debhelper (>= 11~), libnuma-dev
+Build-Depends: debhelper (>= 11~), libnuma-dev, libjemalloc-dev (>= 5)
 Standards-Version: 4.3.0
 Rules-Requires-Root: no
 Homepage: https://github.com/memkind/memkind
