--- a/debian/rules
+++ b/debian/rules
@@ -4,7 +4,7 @@
 # Uncomment this to turn on verbose mode.
 #export DH_VERBOSE=1
 
-export JE_PREFIX=jemk_
+export JE_PREFIX=
 
 # tests need NUMA memory
 override_dh_auto_test:
@@ -15,7 +15,6 @@ override_dh_autoreconf:
 	dh_autoreconf
 
 override_dh_auto_configure:
-	./build_jemalloc.sh
 	dh_auto_configure -- --prefix=/usr \
 	   --includedir=/usr/include --sbindir=/usr/sbin --enable-cxx11 \
 	   --mandir=/usr/share/man --docdir=/usr/share/doc/memkind
