--- a/debian/rules
+++ b/debian/rules
@@ -16,7 +16,7 @@ override_dh_autoreconf:
 
 override_dh_auto_configure:
 	./build_jemalloc.sh
-	dh_auto_configure -- --prefix=/usr \
+	dh_auto_configure -- --prefix=/usr --disable-secure \
 	   --includedir=/usr/include --sbindir=/usr/sbin --enable-cxx11 \
 	   --mandir=/usr/share/man --docdir=/usr/share/doc/memkind
 
