--- a/debian/control
+++ b/debian/control
@@ -2,12 +2,15 @@ Source: memkind
 Section: utils
 Priority: optional
 Maintainer: Adam Borowski <kilobyte@angband.pl>
-Build-Depends: debhelper (>= 11~), libnuma-dev, libdaxctl-dev
+Build-Depends: debhelper (>= 11~), libnuma-dev, libdaxctl-dev, numactl
 Standards-Version: 4.4.1
 Rules-Requires-Root: no
 Homepage: https://github.com/memkind/memkind
 Vcs-Git: https://github.com/kilobyte/memkind.git -b debian
 Vcs-Browser: https://github.com/kilobyte/memkind/tree/debian
+
+# New archs must be verified to successfully test on at least one machine
+# _without_ NUMA disablement!
 
 Package: libmemkind0
 Architecture: amd64 arm64 ppc64el mips64el ia64 ppc64 s390x
