--- a/debian/rules
+++ b/debian/rules
@@ -1,5 +1,6 @@
 #!/usr/bin/make -f
 # -*- makefile -*-
+include /usr/share/dpkg/pkg-info.mk
 
 # Uncomment this to turn on verbose mode.
 #export DH_VERBOSE=1
@@ -11,7 +12,7 @@ override_dh_auto_test:
 	    echo ===== No NUMA, not running tests! =====; fi
 
 override_dh_autoreconf:
-	dpkg-parsechangelog -SVersion|cut -d- -f1 >VERSION
+	echo "$(DEB_VERSION)"|cut -d- -f1 >VERSION
 	dh_update_autotools_config
 	dh_autoreconf
 
